syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto.service";

import "common.proto";
import "workflows.proto";
import "node_connectivity.proto";

message QueryNodeRequestMsg {
}

message QueryNodeResponseMsg {
  SequencerMetricsMsg sequencer_metrics = 1;
  NodeConnectivityMsg node_connectivity = 2;
}

message ReportFailureRequestMsg {
  int64 detector_epoch = 1;
  repeated string failed_node = 2;
}

message ReportFailureResponseMsg {
  enum Type {
    INVALID = 0;
    ACK = 1;
    NACK = 2;
  }

  Type resp_type = 1;
}

message HealFailureRequestMsg {
  int64 detector_epoch = 1;
  repeated string healed_node = 2;
}

message HealFailureResponseMsg {
  enum Type {
    INVALID = 0;
    ACK = 1;
    NACK  = 2;
  }

  Type resp_type = 1;
}

message OrchestratorRequestMsg {
  oneof payload {
    QueryWorkflowMsg query = 1;
    AddNodeWorkflowMsg add_node = 2;
    RemoveNodeWorkflowMsg remove_node = 3;
    HealNodeWorkflowMsg heal_node = 4;
    ForceRemoveNodeWorkflowMsg force_remove_node = 5;
    RestoreRedundancyMergeSegmentsWorkflowMsg restore_redundancy_merge_segments = 6;
  }
}

message OrchestratorResponseMsg {
  oneof payload {
    QueriedWorkflowMsg query_result = 1;
    CreatedWorkflowMsg workflow_created = 2;
  }
}

message BootstrapManagementRequestMsg {
  LayoutMsg layout = 1;
}

message BootstrapManagementResponseMsg {
  enum Type {
    INVALID = 0;
    ACK = 1;
    NACK = 2;
  }

  Type resp_type = 1;
}

message ManagementLayoutRequestMsg {
}

message ManagementLayoutResponseMsg {
  LayoutMsg layout = 1;
}
